--- a/style.css
+++ b/style.css
@@ -15,6 +15,22 @@ body {
   color: rgb(243, 243, 243);
 }
 
+.navbar {
+  display: none;
+}
+
+.navbar--active {
+  height: 50px;
+  background-color: rgba(8, 8, 8, 0.5);
+  display: flex;
+  justify-content: center;
+  padding: 0.5rem;
+}
+
+.navbar__link {
+  display: inline;
+}
+
 .site-header__audio {
   margin-top: 45vh;
   max-width: 100%;
